@@ -1,5 +1,6 @@
 package com.project.euler.feature;
 
+import java.math.BigInteger;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Set;
@@ -11,17 +12,105 @@ import static org.junit.Assert.*;
 /**
  * The class <code>FunctionsTest</code> contains tests for the class <code>{@link Functions}</code>.
  *
- * @generatedBy CodePro at 30/12/14 1:32 PM
+ * @generatedBy CodePro at 30/12/14 3:41 PM
  * @author test
  * @version $Revision: 1.0 $
  */
 public class FunctionsTest {
 	/**
+	 * Run the int GcdR(int,int) method test.
+	 *
+	 * @throws Exception
+	 *
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 */
+	@Test
+	public void testGcdR_1()
+		throws Exception {
+		int value1 = 1;
+		int value2 = 1;
+
+		int result = Functions.GcdR(value1, value2);
+
+		// add additional test code here
+		assertEquals(1, result);
+	}
+
+	/**
+	 * Run the int GcdR(int,int) method test.
+	 *
+	 * @throws Exception
+	 *
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 */
+	@Test
+	public void testGcdR_2()
+		throws Exception {
+		int value1 = 0;
+		int value2 = 1;
+
+		int result = Functions.GcdR(value1, value2);
+
+		// add additional test code here
+		assertEquals(1, result);
+	}
+
+	/**
+	 * Run the Integer addDigit(BigInteger) method test.
+	 *
+	 * @throws Exception
+	 *
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 */
+	@Test
+	public void testAddDigit_1()
+		throws Exception {
+		BigInteger number = BigInteger.valueOf(1L);
+
+		Integer result = Functions.addDigit(number);
+
+		// add additional test code here
+		assertNotNull(result);
+		assertEquals("1", result.toString());
+		assertEquals((byte) 1, result.byteValue());
+		assertEquals((short) 1, result.shortValue());
+		assertEquals(1, result.intValue());
+		assertEquals(1L, result.longValue());
+		assertEquals(1.0f, result.floatValue(), 1.0f);
+		assertEquals(1.0, result.doubleValue(), 1.0);
+	}
+
+	/**
+	 * Run the Integer addDigit(BigInteger) method test.
+	 *
+	 * @throws Exception
+	 *
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 */
+	@Test
+	public void testAddDigit_2()
+		throws Exception {
+		BigInteger number = BigInteger.valueOf(1L);
+
+		Integer result = Functions.addDigit(number);
+
+		// add additional test code here
+		assertNotNull(result);
+		assertEquals("1", result.toString());
+		assertEquals((byte) 1, result.byteValue());
+		assertEquals((short) 1, result.shortValue());
+		assertEquals(1, result.intValue());
+		assertEquals(1L, result.longValue());
+		assertEquals(1.0f, result.floatValue(), 1.0f);
+		assertEquals(1.0, result.doubleValue(), 1.0);
+	}
+
+	/**
 	 * Run the boolean areDistinctDigits(long) method test.
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 1:32 PM
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
 	 */
 	@Test
 	public void testAreDistinctDigits_1()
@@ -39,7 +128,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 1:32 PM
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
 	 */
 	@Test
 	public void testAreDistinctDigits_2()
@@ -57,7 +146,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 1:32 PM
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
 	 */
 	@Test
 	public void testAreDistinctDigits_3()
@@ -75,7 +164,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 1:32 PM
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
 	 */
 	@Test
 	public void testConcat_1()
@@ -94,7 +183,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 1:32 PM
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
 	 */
 	@Test
 	public void testConcat_2()
@@ -109,11 +198,119 @@ public class FunctionsTest {
 	}
 
 	/**
+	 * Run the int containPrimeFactor(int) method test.
+	 *
+	 * @throws Exception
+	 *
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 */
+	@Test
+	public void testContainPrimeFactor_1()
+		throws Exception {
+		int number = 1;
+
+		int result = Functions.containPrimeFactor(number);
+
+		// add additional test code here
+		assertEquals(1, result);
+	}
+
+	/**
+	 * Run the int containPrimeFactor(int) method test.
+	 *
+	 * @throws Exception
+	 *
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 */
+	@Test
+	public void testContainPrimeFactor_2()
+		throws Exception {
+		int number = 1;
+
+		int result = Functions.containPrimeFactor(number);
+
+		// add additional test code here
+		assertEquals(1, result);
+	}
+
+	/**
+	 * Run the int containPrimeFactor(int) method test.
+	 *
+	 * @throws Exception
+	 *
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 */
+	@Test
+	public void testContainPrimeFactor_3()
+		throws Exception {
+		int number = 1;
+
+		int result = Functions.containPrimeFactor(number);
+
+		// add additional test code here
+		assertEquals(1, result);
+	}
+
+	/**
+	 * Run the int countNoOfRelativePrime(int) method test.
+	 *
+	 * @throws Exception
+	 *
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 */
+	@Test
+	public void testCountNoOfRelativePrime_1()
+		throws Exception {
+		int number = 1;
+
+		int result = Functions.countNoOfRelativePrime(number);
+
+		// add additional test code here
+		assertEquals(1, result);
+	}
+
+	/**
+	 * Run the int countNoOfRelativePrime(int) method test.
+	 *
+	 * @throws Exception
+	 *
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 */
+	@Test
+	public void testCountNoOfRelativePrime_2()
+		throws Exception {
+		int number = 1;
+
+		int result = Functions.countNoOfRelativePrime(number);
+
+		// add additional test code here
+		assertEquals(1, result);
+	}
+
+	/**
+	 * Run the int countNoOfRelativePrime(int) method test.
+	 *
+	 * @throws Exception
+	 *
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 */
+	@Test
+	public void testCountNoOfRelativePrime_3()
+		throws Exception {
+		int number = 0;
+
+		int result = Functions.countNoOfRelativePrime(number);
+
+		// add additional test code here
+		assertEquals(0, result);
+	}
+
+	/**
 	 * Run the int countdivisor(long) method test.
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 1:32 PM
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
 	 */
 	@Test
 	public void testCountdivisor_1()
@@ -131,7 +328,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 1:32 PM
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
 	 */
 	@Test
 	public void testCountdivisor_2()
@@ -149,7 +346,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 1:32 PM
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
 	 */
 	@Test
 	public void testCountdivisor_3()
@@ -163,11 +360,419 @@ public class FunctionsTest {
 	}
 
 	/**
+	 * Run the long divideNumber(long,long,long) method test.
+	 *
+	 * @throws Exception
+	 *
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 */
+	@Test
+	public void testDivideNumber_1()
+		throws Exception {
+		long largenumber = 1L;
+		long number = 1L;
+		long largeprimefactor = 1L;
+
+		long result = Functions.divideNumber(largenumber, number, largeprimefactor);
+
+		// add additional test code here
+		assertEquals(1L, result);
+	}
+
+	/**
+	 * Run the long divideNumber(long,long,long) method test.
+	 *
+	 * @throws Exception
+	 *
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 */
+	@Test
+	public void testDivideNumber_2()
+		throws Exception {
+		long largenumber = 1L;
+		long number = 1L;
+		long largeprimefactor = 1L;
+
+		long result = Functions.divideNumber(largenumber, number, largeprimefactor);
+
+		// add additional test code here
+		assertEquals(1L, result);
+	}
+
+	/**
+	 * Run the long divideNumber(long,long,long) method test.
+	 *
+	 * @throws Exception
+	 *
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 */
+	@Test
+	public void testDivideNumber_3()
+		throws Exception {
+		long largenumber = 1L;
+		long number = 1L;
+		long largeprimefactor = 1L;
+
+		long result = Functions.divideNumber(largenumber, number, largeprimefactor);
+
+		// add additional test code here
+		assertEquals(1L, result);
+	}
+
+	/**
+	 * Run the long divideNumber(long,long,long) method test.
+	 *
+	 * @throws Exception
+	 *
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 */
+	@Test
+	public void testDivideNumber_4()
+		throws Exception {
+		long largenumber = 1L;
+		long number = 2L;
+		long largeprimefactor = 1L;
+
+		long result = Functions.divideNumber(largenumber, number, largeprimefactor);
+
+		// add additional test code here
+		assertEquals(1L, result);
+	}
+
+	/**
+	 * Run the long divideNumber(long,long,long) method test.
+	 *
+	 * @throws Exception
+	 *
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 */
+	@Test
+	public void testDivideNumber_5()
+		throws Exception {
+		long largenumber = 1L;
+		long number = 1L;
+		long largeprimefactor = 1L;
+
+		long result = Functions.divideNumber(largenumber, number, largeprimefactor);
+
+		// add additional test code here
+		assertEquals(1L, result);
+	}
+
+	/**
+	 * Run the long factorial(int) method test.
+	 *
+	 * @throws Exception
+	 *
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 */
+	@Test
+	public void testFactorial_1()
+		throws Exception {
+		int n = 0;
+
+		long result = Functions.factorial(n);
+
+		// add additional test code here
+		assertEquals(1L, result);
+	}
+
+	/**
+	 * Run the long factorial(int) method test.
+	 *
+	 * @throws Exception
+	 *
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 */
+	@Test
+	public void testFactorial_2()
+		throws Exception {
+		int n = 1;
+
+		long result = Functions.factorial(n);
+
+		// add additional test code here
+		assertEquals(1L, result);
+	}
+
+	/**
+	 * Run the long factorial(int) method test.
+	 *
+	 * @throws Exception
+	 *
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 */
+	@Test
+	public void testFactorial_3()
+		throws Exception {
+		int n = -1;
+
+		long result = Functions.factorial(n);
+
+		// add additional test code here
+		assertEquals(1L, result);
+	}
+
+	/**
+	 * Run the BigInteger findNearestDifference(BigInteger,BigInteger,BigInteger,int) method test.
+	 *
+	 * @throws Exception
+	 *
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 */
+	@Test
+	public void testFindNearestDifference_1()
+		throws Exception {
+		BigInteger a = BigInteger.valueOf(1L);
+		BigInteger b = BigInteger.valueOf(1L);
+		BigInteger k = BigInteger.valueOf(1L);
+		int D = 1;
+
+		BigInteger result = Functions.findNearestDifference(a, b, k, D);
+
+		// add additional test code here
+		assertNotNull(result);
+		assertEquals(1, result.bitCount());
+		assertEquals("2", result.toString());
+		assertEquals(2, result.intValue());
+		assertEquals(2L, result.longValue());
+		assertEquals(2.0f, result.floatValue(), 1.0f);
+		assertEquals(2.0, result.doubleValue(), 1.0);
+		assertEquals(1, result.signum());
+		assertEquals(2, result.bitLength());
+		assertEquals(1, result.getLowestSetBit());
+		assertEquals((byte) 2, result.byteValue());
+		assertEquals((short) 2, result.shortValue());
+	}
+
+	/**
+	 * Run the BigInteger findNearestDifference(BigInteger,BigInteger,BigInteger,int) method test.
+	 *
+	 * @throws Exception
+	 *
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 */
+	@Test
+	public void testFindNearestDifference_2()
+		throws Exception {
+		BigInteger a = BigInteger.valueOf(1L);
+		BigInteger b = BigInteger.valueOf(1L);
+		BigInteger k = BigInteger.valueOf(1L);
+		int D = 1;
+
+		BigInteger result = Functions.findNearestDifference(a, b, k, D);
+
+		// add additional test code here
+		assertNotNull(result);
+		assertEquals(1, result.bitCount());
+		assertEquals("2", result.toString());
+		assertEquals(2, result.intValue());
+		assertEquals(2L, result.longValue());
+		assertEquals(2.0f, result.floatValue(), 1.0f);
+		assertEquals(2.0, result.doubleValue(), 1.0);
+		assertEquals(1, result.signum());
+		assertEquals(2, result.bitLength());
+		assertEquals(1, result.getLowestSetBit());
+		assertEquals((byte) 2, result.byteValue());
+		assertEquals((short) 2, result.shortValue());
+	}
+
+	/**
+	 * Run the BigInteger findNearestDifference(BigInteger,BigInteger,BigInteger,int) method test.
+	 *
+	 * @throws Exception
+	 *
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 */
+	@Test
+	public void testFindNearestDifference_3()
+		throws Exception {
+		BigInteger a = BigInteger.valueOf(1L);
+		BigInteger b = BigInteger.valueOf(1L);
+		BigInteger k = BigInteger.valueOf(1L);
+		int D = 1;
+
+		BigInteger result = Functions.findNearestDifference(a, b, k, D);
+
+		// add additional test code here
+		assertNotNull(result);
+		assertEquals(1, result.bitCount());
+		assertEquals("2", result.toString());
+		assertEquals(2, result.intValue());
+		assertEquals(2L, result.longValue());
+		assertEquals(2.0f, result.floatValue(), 1.0f);
+		assertEquals(2.0, result.doubleValue(), 1.0);
+		assertEquals(1, result.signum());
+		assertEquals(2, result.bitLength());
+		assertEquals(1, result.getLowestSetBit());
+		assertEquals((byte) 2, result.byteValue());
+		assertEquals((short) 2, result.shortValue());
+	}
+
+	/**
+	 * Run the BigInteger findNearestDifference(BigInteger,BigInteger,BigInteger,int) method test.
+	 *
+	 * @throws Exception
+	 *
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 */
+	@Test
+	public void testFindNearestDifference_4()
+		throws Exception {
+		BigInteger a = BigInteger.valueOf(1L);
+		BigInteger b = BigInteger.valueOf(1L);
+		BigInteger k = BigInteger.valueOf(1L);
+		int D = 1;
+
+		BigInteger result = Functions.findNearestDifference(a, b, k, D);
+
+		// add additional test code here
+		assertNotNull(result);
+		assertEquals(1, result.bitCount());
+		assertEquals("2", result.toString());
+		assertEquals(2, result.intValue());
+		assertEquals(2L, result.longValue());
+		assertEquals(2.0f, result.floatValue(), 1.0f);
+		assertEquals(2.0, result.doubleValue(), 1.0);
+		assertEquals(1, result.signum());
+		assertEquals(2, result.bitLength());
+		assertEquals(1, result.getLowestSetBit());
+		assertEquals((byte) 2, result.byteValue());
+		assertEquals((short) 2, result.shortValue());
+	}
+
+	/**
+	 * Run the BigInteger findNearestDifference(BigInteger,BigInteger,BigInteger,int) method test.
+	 *
+	 * @throws Exception
+	 *
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 */
+	@Test
+	public void testFindNearestDifference_5()
+		throws Exception {
+		BigInteger a = BigInteger.valueOf(1L);
+		BigInteger b = BigInteger.valueOf(1L);
+		BigInteger k = BigInteger.valueOf(1L);
+		int D = 1;
+
+		BigInteger result = Functions.findNearestDifference(a, b, k, D);
+
+		// add additional test code here
+		assertNotNull(result);
+		assertEquals(1, result.bitCount());
+		assertEquals("2", result.toString());
+		assertEquals(2, result.intValue());
+		assertEquals(2L, result.longValue());
+		assertEquals(2.0f, result.floatValue(), 1.0f);
+		assertEquals(2.0, result.doubleValue(), 1.0);
+		assertEquals(1, result.signum());
+		assertEquals(2, result.bitLength());
+		assertEquals(1, result.getLowestSetBit());
+		assertEquals((byte) 2, result.byteValue());
+		assertEquals((short) 2, result.shortValue());
+	}
+
+	/**
+	 * Run the int findNearestSquare(int) method test.
+	 *
+	 * @throws Exception
+	 *
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 */
+	@Test
+	public void testFindNearestSquare_1()
+		throws Exception {
+		int number = 1;
+
+		int result = Functions.findNearestSquare(number);
+
+		// add additional test code here
+		assertEquals(-1, result);
+	}
+
+	/**
+	 * Run the int findNearestSquare(int) method test.
+	 *
+	 * @throws Exception
+	 *
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 */
+	@Test
+	public void testFindNearestSquare_2()
+		throws Exception {
+		int number = 1;
+
+		int result = Functions.findNearestSquare(number);
+
+		// add additional test code here
+		assertEquals(-1, result);
+	}
+
+	/**
+	 * Run the int findNearestSquare(int) method test.
+	 *
+	 * @throws Exception
+	 *
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 */
+	@Test
+	public void testFindNearestSquare_3()
+		throws Exception {
+		int number = 1;
+
+		int result = Functions.findNearestSquare(number);
+
+		// add additional test code here
+		assertEquals(-1, result);
+	}
+
+	/**
+	 * Run the Set<String> generate(String) method test.
+	 *
+	 * @throws Exception
+	 *
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 */
+	@Test
+	public void testGenerate_1()
+		throws Exception {
+		String string = "";
+
+		Set<String> result = Functions.generate(string);
+
+		// add additional test code here
+		assertNotNull(result);
+		assertEquals(1, result.size());
+		assertTrue(result.contains(""));
+	}
+
+	/**
+	 * Run the Set<String> generate(String) method test.
+	 *
+	 * @throws Exception
+	 *
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 */
+	@Test
+	public void testGenerate_2()
+		throws Exception {
+		String string = "";
+
+		Set<String> result = Functions.generate(string);
+
+		// add additional test code here
+		assertNotNull(result);
+		assertEquals(1, result.size());
+		assertTrue(result.contains(""));
+	}
+
+	/**
 	 * Run the Set<String> generateCircular(String) method test.
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 1:32 PM
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
 	 */
 	@Test
 	public void testGenerateCircular_1()
@@ -187,7 +792,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 1:32 PM
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
 	 */
 	@Test
 	public void testGenerateCircular_2()
@@ -207,7 +812,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 1:32 PM
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
 	 */
 	@Test
 	public void testGenerateCircular_3()
@@ -223,11 +828,47 @@ public class FunctionsTest {
 	}
 
 	/**
+	 * Run the int getCycleLength(int) method test.
+	 *
+	 * @throws Exception
+	 *
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 */
+	@Test
+	public void testGetCycleLength_1()
+		throws Exception {
+		int n = 1;
+
+		int result = Functions.getCycleLength(n);
+
+		// add additional test code here
+		assertEquals(1, result);
+	}
+
+	/**
+	 * Run the int getCycleLength(int) method test.
+	 *
+	 * @throws Exception
+	 *
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 */
+	@Test
+	public void testGetCycleLength_2()
+		throws Exception {
+		int n = 1;
+
+		int result = Functions.getCycleLength(n);
+
+		// add additional test code here
+		assertEquals(1, result);
+	}
+
+	/**
 	 * Run the int greatestCommonFactor(int,int) method test.
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 1:32 PM
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
 	 */
 	@Test
 	public void testGreatestCommonFactor_1()
@@ -246,7 +887,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 1:32 PM
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
 	 */
 	@Test
 	public void testGreatestCommonFactor_2()
@@ -261,11 +902,83 @@ public class FunctionsTest {
 	}
 
 	/**
+	 * Run the boolean hasPandigitalProduct(int) method test.
+	 *
+	 * @throws Exception
+	 *
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 */
+	@Test
+	public void testHasPandigitalProduct_1()
+		throws Exception {
+		int n = 1;
+
+		boolean result = Functions.hasPandigitalProduct(n);
+
+		// add additional test code here
+		assertEquals(false, result);
+	}
+
+	/**
+	 * Run the boolean hasPandigitalProduct(int) method test.
+	 *
+	 * @throws Exception
+	 *
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 */
+	@Test
+	public void testHasPandigitalProduct_2()
+		throws Exception {
+		int n = 1;
+
+		boolean result = Functions.hasPandigitalProduct(n);
+
+		// add additional test code here
+		assertEquals(false, result);
+	}
+
+	/**
+	 * Run the boolean hasPandigitalProduct(int) method test.
+	 *
+	 * @throws Exception
+	 *
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 */
+	@Test
+	public void testHasPandigitalProduct_3()
+		throws Exception {
+		int n = 1;
+
+		boolean result = Functions.hasPandigitalProduct(n);
+
+		// add additional test code here
+		assertEquals(false, result);
+	}
+
+	/**
+	 * Run the boolean hasPandigitalProduct(int) method test.
+	 *
+	 * @throws Exception
+	 *
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 */
+	@Test
+	public void testHasPandigitalProduct_4()
+		throws Exception {
+		int n = 0;
+
+		boolean result = Functions.hasPandigitalProduct(n);
+
+		// add additional test code here
+		assertEquals(false, result);
+	}
+
+	/**
 	 * Run the boolean isComposite(long) method test.
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 1:32 PM
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
 	 */
 	@Test
 	public void testIsComposite_1()
@@ -283,7 +996,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 1:32 PM
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
 	 */
 	@Test
 	public void testIsComposite_2()
@@ -301,7 +1014,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 1:32 PM
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
 	 */
 	@Test
 	public void testIsComposite_3()
@@ -315,16 +1028,136 @@ public class FunctionsTest {
 	}
 
 	/**
+	 * Run the boolean isConjecture(long,long[],int[]) method test.
+	 *
+	 * @throws Exception
+	 *
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 */
+	@Test
+	public void testIsConjecture_1()
+		throws Exception {
+		long n = 1L;
+		long[] sqrt = new long[] {1L};
+		int[] prime = new int[] {1};
+
+		boolean result = Functions.isConjecture(n, sqrt, prime);
+
+		// add additional test code here
+		assertEquals(true, result);
+	}
+
+	/**
+	 * Run the boolean isConjecture(long,long[],int[]) method test.
+	 *
+	 * @throws Exception
+	 *
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 */
+	@Test
+	public void testIsConjecture_2()
+		throws Exception {
+		long n = 1L;
+		long[] sqrt = new long[] {1L};
+		int[] prime = new int[] {1};
+
+		boolean result = Functions.isConjecture(n, sqrt, prime);
+
+		// add additional test code here
+		assertEquals(true, result);
+	}
+
+	/**
+	 * Run the boolean isConjecture(long,long[],int[]) method test.
+	 *
+	 * @throws Exception
+	 *
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 */
+	@Test
+	public void testIsConjecture_3()
+		throws Exception {
+		long n = 1L;
+		long[] sqrt = new long[] {};
+		int[] prime = new int[] {1};
+
+		boolean result = Functions.isConjecture(n, sqrt, prime);
+
+		// add additional test code here
+		assertEquals(true, result);
+	}
+
+	/**
+	 * Run the boolean isConjecture(long,long[],int[]) method test.
+	 *
+	 * @throws Exception
+	 *
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 */
+	@Test
+	public void testIsConjecture_4()
+		throws Exception {
+		long n = 1L;
+		long[] sqrt = new long[] {1L};
+		int[] prime = new int[] {1};
+
+		boolean result = Functions.isConjecture(n, sqrt, prime);
+
+		// add additional test code here
+		assertEquals(true, result);
+	}
+
+	/**
+	 * Run the boolean isConjecture(long,long[],int[]) method test.
+	 *
+	 * @throws Exception
+	 *
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 */
+	@Test
+	public void testIsConjecture_5()
+		throws Exception {
+		long n = 1L;
+		long[] sqrt = new long[] {};
+		int[] prime = new int[] {1};
+
+		boolean result = Functions.isConjecture(n, sqrt, prime);
+
+		// add additional test code here
+		assertEquals(true, result);
+	}
+
+	/**
+	 * Run the boolean isConjecture(long,long[],int[]) method test.
+	 *
+	 * @throws Exception
+	 *
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 */
+	@Test
+	public void testIsConjecture_6()
+		throws Exception {
+		long n = 1L;
+		long[] sqrt = new long[] {};
+		int[] prime = new int[] {};
+
+		boolean result = Functions.isConjecture(n, sqrt, prime);
+
+		// add additional test code here
+		assertEquals(true, result);
+	}
+
+	/**
 	 * Run the boolean isDoubleBasePalindrome(Integer) method test.
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 1:32 PM
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
 	 */
 	@Test
 	public void testIsDoubleBasePalindrome_1()
 		throws Exception {
-		Integer number = Integer.valueOf(1);
+		Integer number = new Integer(1);
 
 		boolean result = Functions.isDoubleBasePalindrome(number);
 
@@ -337,12 +1170,12 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 1:32 PM
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
 	 */
 	@Test
 	public void testIsDoubleBasePalindrome_2()
 		throws Exception {
-		Integer number = Integer.valueOf(1);
+		Integer number = new Integer(1);
 
 		boolean result = Functions.isDoubleBasePalindrome(number);
 
@@ -355,17 +1188,71 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 1:32 PM
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
 	 */
 	@Test
 	public void testIsDoubleBasePalindrome_3()
 		throws Exception {
-		Integer number = Integer.valueOf(1);
+		Integer number = new Integer(1);
 
 		boolean result = Functions.isDoubleBasePalindrome(number);
 
 		// add additional test code here
 		assertEquals(true, result);
+	}
+
+	/**
+	 * Run the boolean isLychrel(BigInteger) method test.
+	 *
+	 * @throws Exception
+	 *
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 */
+	@Test
+	public void testIsLychrel_1()
+		throws Exception {
+		BigInteger number = BigInteger.valueOf(1L);
+
+		boolean result = Functions.isLychrel(number);
+
+		// add additional test code here
+		assertEquals(false, result);
+	}
+
+	/**
+	 * Run the boolean isLychrel(BigInteger) method test.
+	 *
+	 * @throws Exception
+	 *
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 */
+	@Test
+	public void testIsLychrel_2()
+		throws Exception {
+		BigInteger number = BigInteger.valueOf(1L);
+
+		boolean result = Functions.isLychrel(number);
+
+		// add additional test code here
+		assertEquals(false, result);
+	}
+
+	/**
+	 * Run the boolean isLychrel(BigInteger) method test.
+	 *
+	 * @throws Exception
+	 *
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 */
+	@Test
+	public void testIsLychrel_3()
+		throws Exception {
+		BigInteger number = BigInteger.valueOf(1L);
+
+		boolean result = Functions.isLychrel(number);
+
+		// add additional test code here
+		assertEquals(false, result);
 	}
 
 	/**
@@ -373,7 +1260,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 1:32 PM
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
 	 */
 	@Test
 	public void testIsNumberContainEven_1()
@@ -391,7 +1278,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 1:32 PM
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
 	 */
 	@Test
 	public void testIsNumberContainEven_2()
@@ -409,7 +1296,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 1:32 PM
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
 	 */
 	@Test
 	public void testIsNumberContainEven_3()
@@ -427,7 +1314,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 1:32 PM
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
 	 */
 	@Test
 	public void testIsPalindrome_1()
@@ -445,7 +1332,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 1:32 PM
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
 	 */
 	@Test
 	public void testIsPalindrome_2()
@@ -463,7 +1350,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 1:32 PM
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
 	 */
 	@Test
 	public void testIsPalindrome_3()
@@ -483,7 +1370,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 1:32 PM
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
 	 */
 	@Test
 	public void testIsPalindrome_4()
@@ -503,7 +1390,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 1:32 PM
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
 	 */
 	@Test
 	public void testIsPandigital_1()
@@ -521,7 +1408,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 1:32 PM
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
 	 */
 	@Test
 	public void testIsPandigital_2()
@@ -539,7 +1426,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 1:32 PM
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
 	 */
 	@Test
 	public void testIsPandigital_3()
@@ -557,7 +1444,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 1:32 PM
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
 	 */
 	@Test
 	public void testIsPandigital_4()
@@ -576,7 +1463,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 1:32 PM
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
 	 */
 	@Test
 	public void testIsPandigital_5()
@@ -595,7 +1482,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 1:32 PM
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
 	 */
 	@Test
 	public void testIsPentagonal_1()
@@ -613,7 +1500,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 1:32 PM
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
 	 */
 	@Test
 	public void testIsPentagonal_2()
@@ -631,7 +1518,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 1:32 PM
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
 	 */
 	@Test
 	public void testIsPrime_1()
@@ -649,7 +1536,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 1:32 PM
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
 	 */
 	@Test
 	public void testIsPrime_2()
@@ -667,7 +1554,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 1:32 PM
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
 	 */
 	@Test
 	public void testIsPrime_3()
@@ -685,7 +1572,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 1:32 PM
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
 	 */
 	@Test
 	public void testIsPrime_4()
@@ -703,7 +1590,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 1:32 PM
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
 	 */
 	@Test
 	public void testIsPrime_5()
@@ -721,7 +1608,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 1:32 PM
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
 	 */
 	@Test
 	public void testJoin_1()
@@ -740,7 +1627,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 1:32 PM
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
 	 */
 	@Test
 	public void testJoin_2()
@@ -759,7 +1646,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 1:32 PM
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
 	 */
 	@Test
 	public void testJoin_3()
@@ -778,7 +1665,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 1:32 PM
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
 	 */
 	@Test
 	public void testMakePandigital_1()
@@ -796,7 +1683,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 1:32 PM
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
 	 */
 	@Test
 	public void testMakePandigital_2()
@@ -814,7 +1701,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 1:32 PM
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
 	 */
 	@Test
 	public void testMakePandigital_3()
@@ -832,7 +1719,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 1:32 PM
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
 	 */
 	@Test
 	public void testMakePandigital_4()
@@ -850,7 +1737,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 1:32 PM
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
 	 */
 	@Test
 	public void testReverse_1()
@@ -868,7 +1755,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 1:32 PM
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
 	 */
 	@Test
 	public void testReverse_2()
@@ -886,7 +1773,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 1:32 PM
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
 	 */
 	@Test
 	public void testSmallestFactor_1()
@@ -904,7 +1791,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 1:32 PM
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
 	 */
 	@Test
 	public void testSmallestFactor_2()
@@ -922,7 +1809,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 1:32 PM
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
 	 */
 	@Test
 	public void testSmallestFactor_3()
@@ -940,7 +1827,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 1:32 PM
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
 	 */
 	@Test
 	public void testSumofdivisor_1()
@@ -958,7 +1845,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 1:32 PM
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
 	 */
 	@Test
 	public void testSumofdivisor_2()
@@ -976,7 +1863,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 1:32 PM
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
 	 */
 	@Test
 	public void testSumofdivisor_3()
@@ -994,7 +1881,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 1:32 PM
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
 	 */
 	@Test
 	public void testSumofdivisor_4()
@@ -1012,7 +1899,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 1:32 PM
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
 	 */
 	@Test
 	public void testSumofdivisor_5()
@@ -1026,12 +1913,69 @@ public class FunctionsTest {
 	}
 
 	/**
+	 * Run the int validateQuadric(int,int) method test.
+	 *
+	 * @throws Exception
+	 *
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 */
+	@Test
+	public void testValidateQuadric_1()
+		throws Exception {
+		int a = 1;
+		int b = 1;
+
+		int result = Functions.validateQuadric(a, b);
+
+		// add additional test code here
+		assertEquals(0, result);
+	}
+
+	/**
+	 * Run the int validateQuadric(int,int) method test.
+	 *
+	 * @throws Exception
+	 *
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 */
+	@Test
+	public void testValidateQuadric_2()
+		throws Exception {
+		int a = 1;
+		int b = 1;
+
+		int result = Functions.validateQuadric(a, b);
+
+		// add additional test code here
+		assertEquals(0, result);
+	}
+
+	/**
+	 * Run the int validateQuadric(int,int) method test.
+	 *
+	 * @throws Exception
+	 *
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 */
+	@Test
+	public void testValidateQuadric_3()
+		throws Exception {
+		int a = 1;
+		int b = 1;
+
+		int result = Functions.validateQuadric(a, b);
+
+		// add additional test code here
+		assertEquals(0, result);
+	}
+
+	/**
 	 * Perform pre-test initialization.
 	 *
 	 * @throws Exception
 	 *         if the initialization fails for some reason
 	 *
-	 * @generatedBy CodePro at 30/12/14 1:32 PM
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
 	 */
 	@Before
 	public void setUp()
@@ -1045,7 +1989,7 @@ public class FunctionsTest {
 	 * @throws Exception
 	 *         if the clean-up fails for some reason
 	 *
-	 * @generatedBy CodePro at 30/12/14 1:32 PM
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
 	 */
 	@After
 	public void tearDown()
@@ -1058,7 +2002,7 @@ public class FunctionsTest {
 	 *
 	 * @param args the command line arguments
 	 *
-	 * @generatedBy CodePro at 30/12/14 1:32 PM
+	 * @generatedBy CodePro at 30/12/14 3:41 PM
 	 */
 	public static void main(String[] args) {
 		new org.junit.runner.JUnitCore().run(FunctionsTest.class);
